# svd2rust

./: .gitignore  .gitlab-ci.yml  .rustfmt.toml  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  README.md  appveyor.yml  bors.toml  build.rs
.cargo/: config.toml
.github/: CODEOWNERS  bors.toml
.github/workflows/: changelog.yml  ci.yml  clippy.yml  diff.yml  release.yml  rustfmt.yml
ci/: before_deploy.ps1  before_deploy.sh  install.sh  package.ps1  package.sh  run-docker.sh  run.sh  script.sh
ci/docker/i686-unknown-linux-gnu/: Dockerfile
ci/docker/i686-unknown-linux-musl/: Dockerfile
ci/docker/x86_64-unknown-linux-gnu/: Dockerfile
ci/docker/x86_64-unknown-linux-musl/: Dockerfile
ci/svd2rust-regress/: Cargo.toml  README.md  tests.json  tests.yml
ci/svd2rust-regress/src/: ci.rs  command.rs  diff.rs  errors.rs  github.rs  main.rs  svd_test.rs  tests.rs
reg/: Cargo.toml  README.md
reg/src/: atomic.rs  lib.rs  r_vcell.rs
src/: config.rs  generate.rs  lib.rs  main.rs  modules.rs  serde.rs  target.rs  util.rs
src/config/: avr.rs  riscv.rs
src/generate/: array_proxy.rs  avr.rs  cargo.rs  device.rs  generic.rs  generic_atomic.rs  generic_avr_ccp.rs  generic_bb.rs  generic_bitbanding.rs  generic_msp430_atomic.rs  generic_reg_raw.rs  generic_reg_vcell.rs  interrupt.rs  mod.rs  peripheral.rs  register.rs  riscv.rs
src/generate/peripheral/: accessor.rs
svd2rust-regress/: Cargo.toml  README.md  tests.yml
svd2rust-regress/src/: ci.rs  command.rs  diff.rs  main.rs  svd_test.rs  tests.rs
