[package]
edition = "2018"
authors = [
    "The ToolsTeam <tools@teams.rust-embedded.org>",
    "Jorge Aparicio <jorge@japaric.io>",
]
build = "build.rs"
categories = [
    "command-line-utilities",
    "embedded",
    "hardware-support",
    "no-std",
]
description = "Generate Rust register maps (`struct`s) from SVD files"
documentation = "https://docs.rs/svd2rust"
keywords = [
    "svd",
    "embedded",
    "register",
    "map",
    "generator",
]
license = "MIT OR Apache-2.0"
name = "svd2rust"
repository = "https://github.com/rust-embedded/svd2rust/"
version = "0.23.0"
readme = "README.md"

[package.metadata.deb]
section = "rust"

[[bin]]
doc = false
name = "svd2rust"
path = "src/main.rs"

[dependencies]
cast = "0.3"
clap = "2.33"
clap_conf = "0.1.5"
env_logger = "0.9"
inflections = "1.1"
log = { version = "~0.4", features = ["std"] }
quote = "1.0"
proc-macro2 = "1.0"
anyhow = "1.0"
thiserror = "1.0"
serde_json = "1.0.75"
serde_yaml = "0.8.23"

[dependencies.svd-parser]
features = ["derive-from"]
version = "0.13.1"

[dependencies.svd-rs]
features = ["serde"]
version = "0.13.1"

[dependencies.syn]
version = "1.0"
features = ["full","extra-traits"]
