[package]
edition = "2021"
authors = [
    "The ToolsTeam <tools@teams.rust-embedded.org>",
    "Jorge Aparicio <jorge@japaric.io>",
]
build = "build.rs"
categories = [
    "command-line-utilities",
    "embedded",
    "hardware-support",
    "no-std",
]
description = "Generate Rust register maps (`struct`s) from SVD files"
documentation = "https://docs.rs/svd2rust"
keywords = [
    "svd",
    "embedded",
    "register",
    "map",
    "generator",
]
license = "MIT OR Apache-2.0"
name = "svd2rust"
repository = "https://github.com/rust-embedded/svd2rust/"
version = "0.27.0"
readme = "README.md"
rust-version = "1.60"

[package.metadata.deb]
section = "rust"

[[bin]]
doc = false
name = "svd2rust"
path = "src/main.rs"
required-features = ["bin"]

[features]
default = ["bin", "json", "yaml"]
bin = ["dep:clap", "dep:env_logger", "serde", "dep:irx-config"]
json = ["dep:serde_json"]
yaml = ["dep:serde_yaml"]

[dependencies]
clap = { version = "4.0", optional = true }
irx-config = { version = "3.1", features = ["cmd", "toml-parser"], optional = true }
env_logger = { version = "0.9", optional = true }
inflections = "1.1"
log = { version = "~0.4", features = ["std"] }
quote = "1.0"
proc-macro2 = "1.0"
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", optional = true }
serde_json = { version = "1.0.85", optional = true }
serde_yaml = { version = "0.9.11", optional = true }

[dependencies.svd-parser]
features = ["expand"]
version = "0.14.1"

[dependencies.svd-rs]
features = ["serde"]
version = "0.14.1"

[dependencies.syn]
version = "1.0"
features = ["full","extra-traits"]
