[package]
name = "reg"
version = "0.1.0"
edition = "2021"
authors = ["The ToolsTeam <tools@teams.rust-embedded.org>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "Register access API"
documentation = "https://docs.rs/reg"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-embedded/reg/"
readme = "README.md"
rust-version = "1.74"

[dependencies]
vcell = { version = "0.1.3" }
portable-atomic = { version = "1.10", default-features = false, optional = true }

[features]
raw_access = []
atomics = ["dep:portable-atomic"]
