[package]
edition = "2021"
name = "svd2rust-regress"
version = "0.1.0"
authors = ["James Munns <james.munns@gmail.com>", "The svd2rust developers"]

[dependencies]
clap = { version = "4.1", features = ["color", "derive"] }
svd2rust = { path = "../../" }
reqwest = { version = "0.11", features= ["blocking"] }
rayon = "1.4"
anyhow = "1"
thiserror = "1"